<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/movie_detail_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/movie_detail_title_text_view"
                style="@style/MovieDetailSimpleTitle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/movie_title_height"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                tools:text="Movie Title"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/movie_detail_title_container"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/movie_detail_poster_image_view"
                android:layout_width="@dimen/movie_poster_image_dimen"
                android:layout_height="@dimen/movie_poster_image_dimen" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/movie_item_highlight_text_size"
                    android:fontFamily="sans-serif"
                    android:text="Released Year" />

                <TextView
                    android:id="@+id/movie_detail_year_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/movie_item_highlight_text_size"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textSize="@dimen/movie_item_highlight_text_size"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:text="Rating" />

                <TextView
                    android:id="@+id/movie_detail_rate_value_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/movie_item_highlight_text_size"
                    android:fontFamily="sans-serif"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/favorite_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:clickable="true"
                    android:src="@drawable/ic_favorite_outline" />
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_synopsis_card_view"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movie_detail_synopsys_title_text_view"
                        style="@style/MovieDetailContainerTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Synopsis" />

                </LinearLayout>

                <include layout="@layout/divider" />

                <TextView
                    android:id="@+id/movie_detail_synopsys_data_text_view"
                    style="@style/MovieDetailContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Test" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_trailers_card_view"
            style="@style/MovieDetailContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MovieDetailContainerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Trailers" />

                <include layout="@layout/divider" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp">

                    <LinearLayout
                        android:id="@+id/movie_detail_trailer_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <ProgressBar
                            android:id="@+id/movie_detail_trailer_progress_bar"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:visibility="gone" />

                        <TextView
                            android:id="@+id/empty_trailer_list"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="@dimen/text_padding_8dp"
                            android:text="@string/no_trailers"
                            android:visibility="gone" />

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/detail_movie_reviews_card_view"
            style="@style/MovieDetailContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/detail_movie_reviews_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/MovieDetailContainerTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reviews" />

                <include layout="@layout/divider" />

                <ProgressBar
                    android:id="@+id/movie_detail_review_progress_bar"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/text_padding_16dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/empty_review_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/text_padding_16dp"
                    android:paddingLeft="@dimen/text_padding_8dp"
                    android:paddingTop="@dimen/text_padding_16dp"
                    android:text="@string/no_reviews"
                    android:visibility="gone" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Add a little space to the end -->
        <View
            android:layout_width="fill_parent"
            android:layout_height="20dp" />

    </LinearLayout>


</android.support.v4.widget.NestedScrollView>
